welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value color
    if(getCouleurSol()==color.green){
                        ^SlugTracking:15: error: type mismatch;
 found   : Unit
 required: Boolean
    	gauche()
              ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur){
    ^SlugTracking:19: error: not found: value getCouleur
getCouleur()
^SlugTracking:20: error: not found: value isfacingTrail
isfacingTrail()
^